# tld-dnssec-timeline

./: .gitignore  PLAN.md  README.md  app.js  index.html  pyproject.toml  style.css
.github/actions/gh-pages-checkout/: action.yml
.github/actions/gh-pages-publish/: action.yml
.github/workflows/: ci.yml  measure.yml  publish-web.yml
data/: idn-cctlds.json  index.json  timeline.json  tld-history.json
data/measurements/: 2012-01-01.json  2012-01-02.json  2012-07-29.json  2012-07-30.json  2012-09-26.json  2012-11-28.json  2012-11-29.json  2012-11-30.json  2012-12-01.json  2012-12-02.json  2012-12-03.json  2012-12-04.json  2012-12-05.json  2013-01-01.json  2013-01-02.json  2013-01-03.json  2013-01-04.json  2013-01-05.json  2013-01-06.json  2013-01-07.json  2013-01-08.json  2013-01-18.json  2013-01-19.json  2013-01-20.json  2013-01-21.json  2013-01-22.json  2013-03-30.json  2013-03-31.json  2013-05-05.json  2013-06-22.json  2013-06-23.json  2013-08-17.json  2013-08-18.json  2013-08-19.json  2013-08-20.json  2013-08-21.json  2013-08-22.json  2013-08-23.json  2013-08-24.json  2013-08-25.json  (+988 more)
measure/: __init__.py  __main__.py  classify.py  metadata.py  output.py  resolver.py  rootzone.py
tests/: test_classify.py  test_metadata.py  test_output.py  test_rootzone.py  test_update_idn_cctlds.py
tests/fixtures/: sample-root.zone
tools/: __init__.py  import_csv.py  update_idn_cctlds.py
web/: app.js  index.html  style.css
