[project]
name = "tld-dnssec-timeline"
version = "1.0.0"
description = "Daily measurement of DNSSEC validation status for DS-signed TLDs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tld-dnssec-measure = "measure.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["measure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `tools` (not part of the installed package)
# is importable when pytest runs as the console script, not just `python -m`.
pythonpath = ["."]
